# Dev-Ops-Project

./: .dockerignore  .env.template  .env.test  .gitignore  .terraform.lock.hcl  .travis.yml  Dockerfile  README.md  Vagrantfile  app.py  azure_webapp_settings.json.template  create_storage_account.sh  deploy.sh  deployment.yaml  docker-compose.yml  index_view_model_test.py  integration_test.py  kubernetes_secrets.yaml.template  main.tf  outputs.tf  pyproject.toml  request_get_mock.py  requirements.txt  selenium_test.py  service.yaml  setup.sh  todo_item.py  trello_items.py  variables.tf
documentation/: Todo App C4 Diagrams.drawio
models/: index_view_model.py  todo_item.py
scripts/: deploy.sh  docker_entrypoint_prod.sh  heroku_deploy_local.sh
src/: app.py  auth_config.py  flask_config.py  mongo_collections.py  mongo_config.py  mongo_db_client.py  session_items.py  trello_config.py  trello_items.py  user.py
src/models/: admin_view_model.py  index_view_model.py  todo_item.py  user.py
src/templates/: admin.html  index.html  layout.html  macros.html
static/: style.css
templates/: index.html  layout.html
tests/: .env.selenium.test  .env.test  index_view_model_test.py  integration_test.py  mongo_client_mock.py  request_get_mock.py  selenium_test.py
tests/end_to_end/: selenium_test.py
tests/integration/: integration_test.py
tests/unit/: admin_view_model_test.py
todo-app/: .env.template  README.md  pyproject.toml
todo-app/src/: app.py  trello_config.py  trello_items.py
todo-app/tests/: .env.selenium.test  .env.test  index_view_model_test.py  (+3 more)
